// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test click error text reload 1`] = `
"<div class=\\"var-list var--box\\">
  <!--v-if-->
  <!--v-if-->
  <div class=\\"var-list__error\\">点击重试</div>
  <div class=\\"var-list__detector\\"></div>
</div>"
`;

exports[`test click error text reload 2`] = `
"<div class=\\"var-list var--box\\">
  <div class=\\"var-list__loading\\">
    <div class=\\"var-list__loading-text\\">正在加载</div>
    <div class=\\"var-loading\\">
      <!--v-if-->
      <div class=\\"var--box var-loading__body\\">
        <div class=\\"var-loading__circle\\"><span class=\\"var-loading__circle-block\\" style=\\"width: 20px; height: 20px; color: currentColor;\\"><svg viewBox=\\"25 25 50 50\\"><circle cx=\\"50\\" cy=\\"50\\" r=\\"20\\" fill=\\"none\\"></circle></svg></span></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <div class=\\"var-list__detector\\"></div>
</div>"
`;

exports[`test list finished 1`] = `
"<div class=\\"var-list var--box\\">
  <!--v-if-->
  <div class=\\"var-list__finished\\">暂无更多</div>
  <!--v-if-->
  <div class=\\"var-list__detector\\"></div>
</div>"
`;

exports[`test list immediate check 1`] = `
"<div class=\\"var-list var--box\\">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div class=\\"var-list__detector\\"></div>
</div>"
`;
